--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Sadiq Platform</title>
+  <title>sadiqplatform</title>
   <link rel="stylesheet" href="./public/styles.css" />
   <link rel="icon" type="image/x-icon" href="./public/img/logo.jpg">
 </head>
