--- a/index.html
+++ b/index.html
@@ -116,7 +116,11 @@
     </div>
 
     <button onclick="toggleAnswer('faq3')">Politica de Privacidade</button>
-    <div id="faq3" class="answer">Consulte a nosssa <a href="https://sadiqplatform.gitbook.io/sadiqplatform.com/geral/politica-de-privacidade.">Politica de Privacidade</a>.
+    <div id="faq3" class="answer">Consulte a nosssa <a href="https://sadiqplatform.gitbook.io/sadiqplatform.com/geral/politica-de-privacidade." target="_blank">Politica de Privacidade</a>.
+    </div>
+
+    <button onclick="toggleAnswer('faq4')">Redes Sociais</button>
+    <div id="faq4" class="answer"><a href="https://www.instagram.com/sadiqplatform" target="_blank">Instagram</a>.
     </div>
 
   </section>
