New upload on website

--- a/index.html
+++ b/index.html
@@ -32,6 +32,25 @@
         target="_blank">Documentos</a></button>
   </section>
 
+
+  <section class="about partners" id="partners">
+    <h2>Empresas com quem trabalhamos</h2>
+
+    <div class="partners-scroll">
+      <div class="partner">
+        <a href="https://fsautomotive.pt" target="_blank"><img src="./public/img/fslogo4.png" alt="Parceiro 1" /></a>
+        <p>Fs Automotive</p>
+      </div>
+      <div class="partner">
+        <a href="https://barcad.site" target="_blank"><img src="./public/img/cad-logo-01.jpg" alt="Parceiro 2" /></a>
+        <p>Bar CAD</p>
+      </div>
+
+      <!-- Adiciona mais parceiros conforme necessário -->
+    </div>
+  </section>
+
+
   <section class="about" id="about-us">
     <h2>Sobre nós</h2>
 
@@ -116,7 +135,9 @@
     </div>
 
     <button onclick="toggleAnswer('faq3')">Politica de Privacidade</button>
-    <div id="faq3" class="answer">Consulte a nosssa <a href="https://sadiqplatform.gitbook.io/sadiqplatform.com/geral/politica-de-privacidade." target="_blank">Politica de Privacidade</a>.
+    <div id="faq3" class="answer">Consulte a nosssa <a
+        href="https://sadiqplatform.gitbook.io/sadiqplatform.com/geral/politica-de-privacidade."
+        target="_blank">Politica de Privacidade</a>.
     </div>
 
     <button onclick="toggleAnswer('faq4')">Redes Sociais</button>
