Updates on configurations

--- a/index.html
+++ b/index.html
@@ -33,16 +33,21 @@
   </section>
 
 
-  <section class="about partners" id="partners">
+  <section class="partners" id="partners">
     <h2>Empresas com quem trabalhamos</h2>
 
     <div class="partners-scroll">
       <div class="partner">
-        <a href="https://fsautomotive.pt" target="_blank"><img src="./public/img/fslogo4.png" alt="Parceiro 1" /></a>
+        <a href="https://fsautomotive.pt" target="_blank">
+          <img src="./public/img/fslogo4.png" alt="Fs Automotive" />
+        </a>
         <p>Fs Automotive</p>
       </div>
+
       <div class="partner">
-        <a href="https://barcad.site" target="_blank"><img src="./public/img/cad-logo-01.jpg" alt="Parceiro 2" /></a>
+        <a href="https://barcad.site" target="_blank">
+          <img src="./public/img/cad-logo-01.jpg" alt="Bar CAD" />
+        </a>
         <p>Bar CAD</p>
       </div>
 
