New try on configuration

--- a/index.html
+++ b/index.html
@@ -35,7 +35,6 @@
 
   <section class="partners" id="partners">
     <h2>Empresas com quem trabalhamos</h2>
-
     <div class="partners-scroll">
       <div class="partner">
         <a href="https://fsautomotive.pt" target="_blank">
@@ -43,15 +42,13 @@
         </a>
         <p>Fs Automotive</p>
       </div>
-
       <div class="partner">
         <a href="https://barcad.site" target="_blank">
           <img src="./public/img/cad-logo-01.jpg" alt="Bar CAD" />
         </a>
         <p>Bar CAD</p>
       </div>
-
-      <!-- Adiciona mais parceiros conforme necessário -->
+      <!-- Mais parceiros -->
     </div>
   </section>
 
