Last update of v1 website, need only add the news parthers

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>sadiqplatform</title>
   <link rel="stylesheet" href="./public/styles.css" />
-  <link rel="icon" type="image/x-icon" href="./public/img/logo.jpg">
+  <link rel="icon" type="image/x-icon" href="./public/img/sadiqplatform-logo.jpg">
 </head>
 
 <body>
@@ -25,9 +25,9 @@
   </nav>
 
   <section class="hero" id="home">
-    <img src="./public/img/locoicon.jpg" class="hero-logo" alt="Hero Logo" />
-    <h1>Bem-vindo à sadiqplatform</h1>
-    <p>Criação de websites e Apps, marketing e inovação digital.</p>
+    <img src="./public/img/sadiqplatform-locoicon.jpg" class="hero-logo" alt="Hero Logo" />
+    <h1>Bem-vindo à Sadiqplatform</h1>
+    <p>A plataforma onde pode criar websites e aplicações mobile personalizados, análises de marketing e inovação digital.</p>
     <button class="btn"><a href="https://sadiqplatform.gitbook.io/sadiqplatform.com/geral/sobre-nos"
         target="_blank">Documentos</a></button>
   </section>
@@ -38,13 +38,13 @@
     <div class="partners-scroll">
       <div class="partner">
         <a href="https://fsautomotive.pt" target="_blank">
-          <img src="./public/img/fslogo4.png" alt="Fs Automotive" />
+          <img src="./public/img/sadiqplatform-fslogo.png" alt="Fs Automotive" />
         </a>
         <p>Fs Automotive</p>
       </div>
       <div class="partner">
         <a href="https://barcad.site" target="_blank">
-          <img src="./public/img/cad-logo-01.jpg" alt="Bar CAD" />
+          <img src="./public/img/sadiqplatform-cadlogo.jpg" alt="Bar CAD" />
         </a>
         <p>Bar CAD</p>
       </div>
@@ -59,27 +59,25 @@
     <div class="about-block">
       <h3>Quem somos?</h3>
       <p>
-        A sadiqplatform é uma plataforma que presta serviços com o pensamento de solucionar o seu problema. Queremos ser
-        a sua solução!
+        Na Sadiqplatform, cada serviço nasce com um propósito: resolver o seu problema. Mais do que oferecer soluções,
+        somos a solução que procura!
       </p>
       <p class="quote">
-        "Estamos presentes desde o momento do plano/estudo do mercado, à execução de todo o conteúdo digital, ao
-        website/app e marketing, e finalizamos com a divulgação e promoção do produto final."
+        “Acompanhamos os nossos clientes desde a fase de planeamento estratégico até à execução completa de todo o
+        conteúdo digital — incluindo a criação de websites, aplicações personalizadas e estratégias de marketing digital
+        eficazes.”
+      </p>
+      <br>
+      <p>
+        A nossa plataforma apoia pequenas, médias e grandes empresas, bem como particulares, parceiros diretos e
+        startups. Oferecemos uma ampla gama de recursos para impulsionar o seu negócio, sempre com máxima confiança,
+        transparência e compromisso.
       </p>
     </div>
 
-    <div class="about-block">
+    <div class="about-location">
       <h3>Onde estamos?</h3>
       <p>Portugal, Lisboa.</p>
-    </div>
-
-    <div class="about-block">
-      <h3>Apoios</h3>
-      <p>
-        A nossa plataforma contribui para o apoio a pequenas, médias e grandes empresas, assim como a particulares ou
-        parceiros diretos e startups. Disponibilizamos diversos recursos para o seu negócio, garantindo sempre a máxima
-        confiança e lealdade.
-      </p>
     </div>
   </section>
 
@@ -89,21 +87,24 @@
     <div class="service">
       <h3>Criação de Websites</h3>
       <p>
-        Criamos desde a estrutura até ao design do seu website. Definimos todos os parâmetros necessários para que o seu
-        negócio tenha mais visibilidade. Um website promove maior confiança e contacto direto com novos clientes.
-      </p>
+        Desenvolvemos o seu website desde a estrutura base até ao design final, definindo todos os parâmetros essenciais
+        para maximizar a visibilidade do seu negócio. Um website bem construído transmite confiança, fortalece a sua
+        presença online e facilita o contacto direto com novos clientes. </p>
     </div>
 
     <div class="service">
       <h3>Criação de App</h3>
       <p>
-        Se deseja criar uma App e não sabe como, a Sadiqplatform desenvolve aplicações rentáveis e produtivas para o seu
-        negócio.
+        Se pretende criar uma aplicação mas não sabe por onde começar, a Sadiqplatform está aqui para ajudar.
+        <br>
+        Desenvolvemos aplicações personalizadas, rentáveis e orientadas para os resultados do seu negócio.
       </p>
+      <br>
+      <p>▪︎ Tipos de Aplicações:</p>
       <ul>
-        <li>App para clientes</li>
-        <li>App de gestão própria</li>
-        <li>App para análise de dados</li>
+        <li>1. App para clientes</li>
+        <li>2. App de gestão própria</li>
+        <li>3. App para análise de dados</li>
       </ul>
       <br>
     </div>
@@ -111,14 +112,15 @@
     <div class="service">
       <h3>Criação de Robot para WhatsApp e Telegram</h3>
       <p>
-        Um robot de mensagens auxilia na resposta automática às mensagens da empresa, garantindo atendimento imediato,
-        confortável e eficiente para os seus clientes.
+        Um robô de mensagens automatiza as respostas da sua empresa, garantindo um atendimento imediato, eficiente e
+        confortável para os seus clientes — a qualquer hora, em qualquer lugar.
       </p>
     </div>
 
     <div class="service">
       <h3>Gestão de Redes Sociais</h3>
-      <p>Gerimos desde as suas publicações, até à análise de estatisticas da sua Pagina Social.</p>
+      <p>Transformamos a sua presença nas redes sociais em resultados concretos, com conteúdos impactantes e decisões
+        baseadas em dados.</p>
     </div>
 
     <div class="service">
@@ -128,28 +130,24 @@
   </section>
 
   <section class="faq" id="contact">
-    <button onclick="toggleAnswer('faq1')">Quais são os serviços que oferecemos?</button>
-    <div id="faq1" class="answer">Oferecemos serviços de desenvolvimento de Apps e Websites, Web Design, Branding, SEO,
-      Campanhas Digitais e Gestão de Redes Sociais.</div>
-
-    <button onclick="toggleAnswer('faq2')">Como posso entrar em contato?</button>
-    <div id="faq2" class="answer">Pode contactar-nos via e-mail: <a href="mailto:sadiqmasterdevil@gmail.com">Email</a>.
+    <button onclick="toggleAnswer('faq1')">Como posso entrar em contato?</button>
+    <div id="faq1" class="answer">Pode contactar-nos via e-mail: <a href="mailto:sadiqmasterdevil@gmail.com">Email</a>.
     </div>
 
-    <button onclick="toggleAnswer('faq3')">Politica de Privacidade</button>
-    <div id="faq3" class="answer">Consulte a nosssa <a
+    <button onclick="toggleAnswer('faq2')">Politica de Privacidade</button>
+    <div id="faq2" class="answer">Consulte a nosssa <a
         href="https://sadiqplatform.gitbook.io/sadiqplatform.com/geral/politica-de-privacidade."
         target="_blank">Politica de Privacidade</a>.
     </div>
 
-    <button onclick="toggleAnswer('faq4')">Redes Sociais</button>
-    <div id="faq4" class="answer"><a href="https://www.instagram.com/sadiqplatform" target="_blank">Instagram</a>.
+    <button onclick="toggleAnswer('faq3')">Redes Sociais</button>
+    <div id="faq3" class="answer">O nosso<a href="https://www.instagram.com/sadiqplatform" target="_blank"> Instagram</a>.
     </div>
 
   </section>
 
   <footer class="footer">
-    <p>&copy; 2025 Sadiq Platform. Todos os direitos reservados. <a
+    <p>&copy; 2025 Sadiqplatform&reg;. Todos os direitos reservados. <a
         href="https://sadiqplatform.gitbook.io/sadiqplatform.com/geral/politica-de-privacidade."
         target="_blank">Política de Privacidade</a></p>
   </footer>
@@ -178,5 +176,4 @@
   </script>
 
 </body>
-
 </html>
